--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  // Refactored dependencies
+  equatable: ^0.4.0
+
   provider: ^3.0.0
   intl: ^0.15.8
   charts_flutter: ^0.9.0
