--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ownless2
+name: broom
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -24,8 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  // Refactored dependencies
-  equatable: ^0.4.0
+  equatable: ^1.2.6
+  dartz: ^0.9.2
+  uuid: 2.2.2
 
   provider: ^3.0.0
   intl: ^0.15.8
@@ -43,6 +44,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^4.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
