--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   equatable: ^1.2.6
   dartz: ^0.9.2
   uuid: 2.2.2
+  hive: ^1.4.4+1
+  hive_flutter: ^0.3.1
+  hive_generator: ^0.8.2
+  get_it: ^5.0.6
 
   provider: ^3.0.0
   intl: ^0.15.8
@@ -35,7 +39,7 @@ dependencies:
   camera: ^0.5.8+11
   path_provider: ^1.6.22
   path: ^1.7.0
-  sqflite: ^1.1.5
+  sqflite: ^1.3.2+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
