--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,19 +27,20 @@ dependencies:
   equatable: ^1.2.6
   dartz: ^0.9.2
   uuid: 2.2.2
-  hive: ^1.4.4+1
-  hive_flutter: ^0.3.1
-  hive_generator: ^0.8.2
   get_it: ^5.0.6
+  flutter_bloc: ^6.1.2
+  bloc: ^6.1.1
+  provider: ^4.3.2+2
+  build_runner: ^1.11.1
+  sqflite: ^1.3.2+3
 
-  provider: ^3.0.0
+  # Legacy dependencies
   intl: ^0.15.8
   charts_flutter: ^0.9.0
   auto_size_text: ^2.1.0
   camera: ^0.5.8+11
   path_provider: ^1.6.22
   path: ^1.7.0
-  sqflite: ^1.3.2+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
