--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   build_runner: ^1.11.1
   sqflite: ^1.3.2+3
   camera: ^0.7.0+2
+  font_awesome_flutter: ^8.11.0
 
   # Legacy dependencies
   intl: ^0.15.8
